[workspace]
resolver = "2"

members = ["dxe_readiness_capture", "dxe_readiness_validator"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"
description = "Dxe Readiness Capture/Validation Tool"
repository = "https://github.com/OpenDevicePartnership/patina-readiness-tool"

[workspace.dependencies]
cfg-if = "1.0.4"
goblin = { version = "0.10.3", default-features = false }
patina = { version = "18", features = ["serde"] }
patina_stacktrace = { version = "18" }
log = { version = "^0.4", default-features = false, features = [
  "release_max_level_warn",
] }
spin = "^0.9.8"
serde = { version = "1", default-features = false, features = [
  "alloc",
  "derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
r-efi = { version = "5.3.0", default-features = false }
uuid = { version = "1.18", default-features = false }
clap = { version = "4", features = ["derive"] }

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 0

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
incremental = true
